--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = "lenta-build.loader.js";
+      var loaderUrl = "Build/lenta-build.loader.js";
       var config = {
         devicePixelRatio: getDpi(),
-        dataUrl: "lenta-build.data.unityweb",
-        frameworkUrl: "lenta-build.framework.js.unityweb",
-        codeUrl: "lenta-build.wasm.unityweb",
+        dataUrl: "Build/lenta-build.data.unityweb",
+        frameworkUrl: "Build/lenta-build.framework.js.unityweb",
+        codeUrl: "Build/lenta-build.wasm.unityweb",
         symbolsUrl: buildUrl + "/",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
