--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         frameworkUrl: "Build/lenta-build.framework.js.unityweb",
         codeUrl: "Build/lenta-build.wasm.unityweb",
         symbolsUrl: buildUrl + "/",
-        streamingAssetsUrl: "StreamingAssets",
+        streamingAssetsUrl: "StreamingAssets/",
         companyName: "DefaultCompany",
         productName: "Test Project WebGl OLD",
         productVersion: "0.1",
