--- a/all.html
+++ b/all.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Folders in 10/</title>
+  <title>Folders in ~/</title>
 </head>
 <body>
-  <h1>Folders in /10/</h1>
+  <h1>Folders in ~/</h1>
   <ul id="folder-list">Loading...</ul>
 
   <script>
     async function loadFolders() {
-      const response = await fetch('https://api.github.com/repos/dmytro-onlyspace/lenta-build/contents/10');
+      const response = await fetch('https://api.github.com/repos/dmytro-onlyspace/lenta-build/contents/');
       const items = await response.json();
       
       const ul = document.getElementById('folder-list');
