--- a/all.html
+++ b/all.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Folders in ~/</title>
+  <title>Folders in repostitory ~/</title>
 </head>
 <body>
-  <h1>Folders in ~/</h1>
+  <h1>Folders in repository ~/</h1>
   <ul id="folder-list">Loading...</ul>
 
   <script>
