--- a/50_mCon/index.html
+++ b/50_mCon/index.html
@@ -4,7 +4,7 @@
     <!--fix mobile input for ios (screen zoom issue) -->
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=0"
+      content="width=device-width, initial-scale=1, user-scalable=0 , viewport-fit=cover"
     />
     <!---->
     <meta charset="utf-8" />
